# QtQML

./: .gitignore  README.md
.buildSystem/linux/: build.sh  build_debug.sh
CPPListModelsInQML/: CMakeLists.txt  CPPListModelsInQML  main.cpp  main.qml  qml.qrc
CPPListModelsInQML/qml/: MCheckBox.qml  MCheckList.qml
CPPListModelsInQML/src/: checklist.cpp  checklist.h  checklistmodel.cpp  checklistmodel.h  template.cpp  template.h
CPPModelsInQML/: .clang-format  CMakeLists.txt  CPPModelsInQML  main.cpp  main.qml  qml.qrc
CPPModelsInQML/qml/: CheckList.qml
CPPModelsInQML/src/: checklistmodel.cpp  checklistmodel.h
QtDesignStudio/TestProject1/: Screen01.ui.qml  TestProject1.qml  TestProject1.qmlproject  TestProject1.qmlproject.qtds
QtDesignStudio/TestProject1/imports/QtQuick/Studio/Components/: ArcItem.qml
QtDesignStudio/TestProject1/imports/TestProject1/designer/: plugin.metainfo
